# Content_Generation

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: main.py
src/audio/: audio.py
src/consts/: test_consts.py
src/data/final_states/: short_story_about_quick_fox.json  states.txt
src/data/final_states/first_year_of_studies/: first_year_of_studies.json
src/data/final_states/short_story_about_quick_fox/: short_story_about_quick_fox.json
src/data/short_story_about_quick_fox/short_story_about_quick_fox_subtitles/: subtitles.srt
src/data/subtitles/srt/: test.srt
src/images/: images.py  prompt_story.py
src/pipeline/: pipeline.py
src/schemas/: schemas.py
src/story/: story.py
src/video/: animations.py  editor.py  upload.py
src/video_editing/: editor.py
