[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "content_generation"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A short description of my project."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"] # Tell setuptools to look for packages inside the 'src' directory